; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_flex_actions.c_mlxsw_sp_act_kvdl_fwd_entry_del.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_acl_flex_actions.c_mlxsw_sp_act_kvdl_fwd_entry_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { i32 }

@MLXSW_SP_KVDL_ENTRY_TYPE_PBS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @mlxsw_sp_act_kvdl_fwd_entry_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlxsw_sp_act_kvdl_fwd_entry_del(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mlxsw_sp*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.mlxsw_sp*
  store %struct.mlxsw_sp* %7, %struct.mlxsw_sp** %5, align 8
  %8 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %5, align 8
  %9 = load i32, i32* @MLXSW_SP_KVDL_ENTRY_TYPE_PBS, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @mlxsw_sp_kvdl_free(%struct.mlxsw_sp* %8, i32 %9, i32 1, i32 %10)
  ret void
}

declare dso_local i32 @mlxsw_sp_kvdl_free(%struct.mlxsw_sp*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
